# Alert-Agent

./: .gitignore  ARCHITECTURE_DIAGRAM.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_VALIDATION_ENHANCEMENT.md  Dockerfile  FLOW.md  LANGCHAIN_LANGGRAPH_USAGE.md  README.md  backfill_graph_emails.py  clear_cache.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  services.yaml  test_fixes.py  test_full_integration.py  test_graph_api.py  test_verify.py
agentcore-deployment/: .bedrock_agentcore.yaml  .gitignore  lambda_handler.py  main.py  pyproject.toml  requirements.txt  services.yaml  test-alarm.json
agentcore-deployment/framework/: __init__.py
copilot/: .workspace
copilot/aws-alert-bot/: manifest.yml
framework/: __init__.py  agent.py  config.py  context_manager.py  response_formatter.py  workflow_validator.py
framework/core/: agent.py  config.py  context_manager.py  conversation_logger.py  graph_email_client.py  memory.py
framework/events/: __init__.py  base.py  email_event.py  graph_email_event.py
framework/tools/: cloudwatch_fetcher.py  cloudwatch_fetcher_skill.md  comprehensive_validator.py  comprehensive_validator_skill.md  dependency_checker.py  dependency_checker_skill.md  email_parser.py  email_parser_skill.md  graph_email_tools.py  log_group_discovery.py  log_group_discovery_skill.md  service_dependencies_kb.md  (+4 more)
local/: .gitignore  AGENTCORE_DEPLOYMENT.md  ARCHITECTURE_DIAGRAM.md  FLOW.md  LANGCHAIN_LANGGRAPH_USAGE.md  README.md  agentcore_runtime.py  backfill_graph_emails.py  main.py  requirements.txt
tests/: golden_evals.py  run_evals.py
(+47 files in other folders)
