[project]
name = "aws-alert-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.70",
    "httpx>=0.28.1",
    "langchain>=1.2.12",
    "langchain-aws>=1.4.0",
    "langchain-core>=1.2.19",
    "langgraph>=1.1.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
]
